# derive_screaming_snake_case

./: Cargo.toml  README.md
.github/: .dependabot.yml
src/: lib.rs
tests/: derive_display.rs
